--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -65,7 +65,11 @@ jobs:
           
           sleep 10
           
-          # Test if the application is responding
-          docker exec test-portracker wget --no-verbose --tries=1 --spider http://localhost:3000/api/servers || exit 1
-          
-          docker stop test-portracker
+          if docker ps | grep test-portracker; then
+            echo "✅ Container started successfully"
+            docker stop test-portracker
+          else
+            echo "❌ Container failed to start or crashed"
+            docker logs test-portracker || true
+            exit 1
+          fi
