fix: update Docker image test to use correct port and improve backend copy instructions in Dockerfile

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -58,13 +58,14 @@ jobs:
       - name: Test Docker image
         if: github.event_name != 'pull_request'
         run: |
-          # Start container with correct port and give it time to initialize
           docker run --rm -d --name test-portracker \
+            -p 4999:4999 \
+            -v /var/run/docker.sock:/var/run/docker.sock:ro \
             -e PORT=4999 \
             -e DATABASE_PATH=/data/test.db \
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
           
-          # Wait for startup and show logs if it fails
+          # Wait for startup
           sleep 15
           
           # Check if container is still running
@@ -75,7 +76,7 @@ jobs:
             exit 1
           fi
           
-          # Test the correct health endpoint from host
+          # Test the health endpoint from the host
           if curl -f http://localhost:4999/api/health; then
             echo "✅ Health check passed"
           else
