--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -61,7 +61,7 @@ jobs:
           mkdir -p $RUNNER_TEMP/portracker-test-data
           chmod 777 $RUNNER_TEMP/portracker-test-data
 
-          docker run --rm -d --name test-portracker --user root \
+          docker run -d --name test-portracker --user root \
             -p 4999:4999 \
             -v /var/run/docker.sock:/var/run/docker.sock:ro \
             -v $RUNNER_TEMP/portracker-test-data:/data \
