--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
-  "dependencies": {
+"name": "portracker",
+"version": "1.0.0",
+"description": "A multi-platform port-tracking dashboard",
+"main": "backend/index.js",
+"scripts": {
+  "start": "node backend/index.js",
+  "test": "jest"
+},
+"repository": {
+  "type": "git",
+  "url": "https://github.com/mostafa-wahied/portracker.git"
+},
+"license": "MIT",
+"dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
