--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "debug": "^4.4.1",
+    "dockerode": "^4.0.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "ws": "^8.14.2"
