--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
 "name": "portracker",
-"version": "1.0.0",
+"version": "1.0.4",
 "description": "A multi-platform port-tracking dashboard",
 "main": "backend/index.js",
 "scripts": {
   "start": "node backend/index.js",
-  "test": "jest"
+  "test": "jest",
+  "lint": "eslint .",
+  "lint:fix": "eslint . --fix"
 },
 "repository": {
   "type": "git",
@@ -23,6 +25,10 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+  "jest": "^29.7.0",
+  "eslint": "^9.9.0",
+  "@eslint/js": "^9.9.0",
+  "globals": "^15.11.0",
+  "eslint-plugin-react-hooks": "^5.1.0"
   }
 }
